Upd: major test refactoring, remove unused account method, recompile swagger
