# backend/pkg/e/response.go
@@ -6,10 +6,11 @@ import (
 )
 
 var (
-	ClientNoteError    = errors.New("note does not exist or does not belong to user")
-	ClientTagError     = errors.New("tag does not exist or does not belong to user")
-	ClientAccountError = errors.New("username already exists")
-	InternalDBError    = errors.New("database error occurred")
+	ClientNoteError      = errors.New("note does not exist or does not belong to user")
+	ClientTagError       = errors.New("tag does not exist or does not belong to user")
+	ClientAuthorizeError = errors.New("user with this credentials can not be found")
+	ClientAccountError   = errors.New("username already exists")
+	InternalDBError      = errors.New("database error occurred")
 )
 
 func NewErrorResponse(ctx *gin.Context, status int, err error) {
